--- a/Business_Solutions/static/css/layout.css
+++ b/Business_Solutions/static/css/layout.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .mother-div{
     width: 100vw;
     height: 100vh;
@@ -74,6 +79,7 @@
 
 .content{
     width: 85vw;
+    height: 100vh;
 }
 .navbar-w{
     width: 100%;
@@ -82,4 +88,10 @@
 
 .selected{
     background: rgb(255, 174, 0);
+}
+
+
+.main-content{
+    width: 100%;
+    height: 93%;
 }
