--- a/Business_Solutions/templates/inventory/addbrand.html
+++ b/Business_Solutions/templates/inventory/addbrand.html
@@ -24,7 +24,7 @@
                         {{ form.brand.errors }}
                     </div>   
                     <div class="width-100 mt-3 d-flex align-items-center">
-                        <a class="btn btn-outline-primary" href="{%url 'inventory'%}">Back</a>
+                        <a class="btn btn-outline-secondary" href="{%url 'brand-list'%}">Back</a>
                         <button class="btn btn-outline-success ms-2" type="submit">Add</button>
                     </div>
                 </form>
