--- a/Business_Solutions/templates/inventory/categoryUpdate.html
+++ b/Business_Solutions/templates/inventory/categoryUpdate.html
@@ -3,7 +3,7 @@
 
 <!-- titile -->
 
-{%block title%} Add New Category | Amar Shop {%endblock title%}
+{%block title%} Update Category | Amar Shop {%endblock title%}
 
 {%block link%}
     <link rel="stylesheet" href="{%static 'css/inventory.css'%}">
@@ -16,7 +16,7 @@
     <div class="card height-100">
         <div class="d-flex justify-content-center align-items-center height-100">
             <div class="card custom-card">
-                <div class="card-header fs-4 text-center">Add New Category</div>
+                <div class="card-header fs-4 text-center">Update Category</div>
                 <div class="card-body">
                     <form method="post" enctype="multipart/form-data">
                         {%csrf_token%}
