--- a/Business_Solutions/templates/inventory/productUpdate.html
+++ b/Business_Solutions/templates/inventory/productUpdate.html
@@ -3,7 +3,7 @@
 
 <!-- titile -->
 
-{%block title%} Add New Product | Amar Shop {%endblock title%}
+{%block title%} Update Product | Amar Shop {%endblock title%}
 
 {%block link%}
     <link rel="stylesheet" href="{%static 'css/inventory.css'%}">
@@ -12,17 +12,17 @@
 <!-- main body -->
 {%block main%}
 <div class="inventory p-2">
-    <div class="card height-100 p-5">
+
+    <div class="card p-5">
 
         <div class="card">
-            <div class="card-header text-center fs-4">Add New Product</div>
+            <div class="card-header fs-5 fw-bolder text-center">Update Product</div>
             <div class="card-body">
-                <form method="post" enctype="multipart/form-data">
-                    {%csrf_token%}
-
-                    <!-- {{form.as_p}} -->
+                <form method="post" accept="">
+                    {% csrf_token %}
+                    <!-- {{ form.as_table }} -->
                     <div class="col mb-3">
-                        <label for="{{ form.model_for_label }}" class="form-label">Model Name:</label>
+                        <label for="{{ form.model_for_label }}" class="form-label">Model:</label>
                         {{ form.model }}
                         <div class="text-danger mt-1">
                             {{ form.model.errors }}
@@ -46,14 +46,14 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col">
-                            <label for="{{ form.price_for_label }}" class="form-label">Price:</label>
+                            <label for="{{ form.price_for_label }}" class="form-label">Price:(BDT)</label>
                             {{ form.price }}
                             <div class="text-danger mt-1">
                                 {{ form.price.errors }}
                             </div>
                         </div>
                         <div class="col">
-                            <label for="{{ form.cost_for_label }}" class="form-label">Cost:</label>
+                            <label for="{{ form.cost_for_label }}" class="form-label">Cost:(BDT)</label>
                             {{ form.cost }}
                             <div class="text-danger mt-1">
                                 {{ form.cost.errors }}
@@ -85,13 +85,17 @@
                             {{ form.description.errors }}
                         </div>
                     </div>
-                    <a href="{% url 'product-list' %}" class="btn btn-outline-secondary">Cancel</a>
-                    <button class="ms-2 btn btn-outline-success" type="submit">Create</button>
+                    <div class="d-flex">
+                        <a href="{%url 'product-details' product.id%}" class="btn btn-secondary">
+                            Cancel
+                        </a> 
+                        <button type="submit" class="ms-2 btn btn-outline-success">Update</button>
+                    </div>
                 </form>
             </div>
         </div>
-
-
+        
     </div>
+
 </div>
 {%endblock main%}
