--- a/Business_Solutions/templates/inventory/allcategory.html
+++ b/Business_Solutions/templates/inventory/allcategory.html
@@ -13,31 +13,26 @@
 {%block main%}
 <div class="inventory p-2">
 
-    <div class="card">
+    <div class="card height-100">
         <div class="card-header d-flex justify-content-between align-items-center">
-            <div class="fs-5 text-center">Categories</div>
-            <a href="{%url 'create-category'%}" class="btn btn-outline-success btn-sm">Add Category</a>
+            <a href="{%url 'inventory'%}" class="btn-back">
+                <img src="{%static 'icons/inventory/back.png'%}" width="25" alt=""/>
+            </a>
+            <div class="fs-5 fw-bold text-center">Categories</div>
+            <a href="{%url 'create-category'%}" class="btn btn-success btn-sm">Add Category</a>
         </div>
         <div class="card-body">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Category Name</th>
-                        <th scope="col">Total Product</th>
-                        <th scope="col">Total brand</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {%for category in categories%}
-                    <tr>
-                        <td>{{category}}</td>
-                        <td>12</td>
-                        <td>5</td>
-                      </tr>
-                    {%endfor%}
-                </tbody>
-            </table>
-
+            <ul class="list-group">
+                {%for category in categories%}
+                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <div>{{category}}</div>
+                    <div>
+                        <a href="{%url 'category-update' category.id%}" class="btn btn-sm btn-outline-success">Update</a>
+                        <a href="{%url 'category-delete' category.id%}" class="btn btn-sm btn-outline-danger">Remove</a>
+                    </div>
+                </li>
+                {%endfor%}
+            </ul>
         </div>
     </div>  
 
