--- a/Business_Solutions/templates/inventory/brandDelete.html
+++ b/Business_Solutions/templates/inventory/brandDelete.html
@@ -3,7 +3,7 @@
 
 <!-- titile -->
 
-{%block title%} Add New Category | Amar Shop {%endblock title%}
+{%block title%} Delete Brand | Amar Shop {%endblock title%}
 
 {%block link%}
     <link rel="stylesheet" href="{%static 'css/inventory.css'%}">
@@ -16,17 +16,13 @@
     <div class="card height-100">
         <div class="d-flex justify-content-center align-items-center height-100">
             <div class="card custom-card">
-                <div class="card-header fs-4 text-center">Add New Category</div>
+                <div class="card-header fs-4 text-center">Are you sure to delete brand "{{brand}}" ?</div>
                 <div class="card-body">
                     <form method="post" enctype="multipart/form-data">
-                        {%csrf_token%}
-                        {{ form.category}}
-                        <div class="mt-1 text-danger">
-                            {{ form.category.errors }}
-                        </div>   
+                        {%csrf_token%} 
                         <div class="width-100 mt-3 d-flex align-items-center">
-                            <a class="btn btn-outline-secondary" href="{%url 'category-list'%}">Cancel</a>
-                            <button class="btn btn-outline-success ms-2" type="submit">Add</button>
+                            <a class="btn btn-outline-secondary" href="{%url 'brand-list'%}">Cancel</a>
+                            <button class="btn btn-outline-danger ms-2" type="submit">Delete</button>
                         </div>
                     </form>
                 </div>
