--- a/Business_Solutions/templates/inventory/brandList.html
+++ b/Business_Solutions/templates/inventory/brandList.html
@@ -21,7 +21,13 @@
         <div class="card-body">
             <ul class="list-group">
                 {%for brand in brands%}
-                <li class="list-group-item list-group-item-action">{{brand}}</li>
+                <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    <div>{{brand}}</div>
+                    <div>
+                        <a href="{%url 'brand-update' brand.id %}" class="btn btn-sm btn-outline-success">Update</a>
+                        <a href="{%url 'brand-delete' brand.id %}" class="btn btn-sm btn-outline-danger">Remove</a>
+                    </div>
+                </li>
                 {%endfor%}
             </ul>
         </div>
