--- a/Business_Solutions/templates/inventory/inventoryDetails.html
+++ b/Business_Solutions/templates/inventory/inventoryDetails.html
@@ -26,17 +26,17 @@
         <div class="row height-100">
             <div class="mt-4 col">
                 <div class="fs-2 fw-bold">{{inventory.product.model}}</div>
-                <div class="mt-5 row height-50">
-                    <div class="col d-flex flex-column justify-content-between">
-                        <div>Brand: <span class="alert alert-info p-1 m-0">{{inventory.product.brand}}</span> </div>
-                        <div>Category: <span class="alert alert-info p-1 m-0">{{inventory.product.category}}</span></div>
-                        <div>Price: {{inventory.product.price}} BDT</div>
-                        <div>Cost: {{inventory.product.cost}} BDT</div>
-                        <div>Description: {{inventory.product.description}}</div>
-                    </div>
-                    <div class="col d-flex flex-column justify-content-between">
-                        <div>Quantity: {{inventory.quantity}} piece</div>
-                        <div>Stock: 
+                <div class="mt-4 row">
+                    <div class="col">Brand: <span class="alert alert-info p-1 m-0">{{inventory.product.brand}}</span> </div>
+                    <div class="col">Category: <span class="alert alert-info p-1 m-0">{{inventory.product.category}}</span></div>
+                </div>
+                <div class="mt-5 row">
+                    <div class="col">Price: {{inventory.product.price}} BDT</div>
+                    <div class="col">Cost: {{inventory.product.cost}} BDT</div>
+                </div>
+                <div class="mt-5 row">
+                    <div class="col">Quantity: {{inventory.quantity}} piece</div>
+                        <div class="col">Stock: 
                             {%if inventory.quantity < 5 and inventory.quantity > 0 %}
                                 <span class="alert alert-warning p-1 m-0">Running out</span>
                             {%elif inventory.quantity == 0%}
@@ -45,13 +45,15 @@
                                 <span class="alert alert-success p-1 m-0">Available</span>
                             {%endif%} 
                         </div>
-                        <div>Released year: {{inventory.product.released_year}}</div>
-                        <div>Supplier: {{inventory.supplierId.company_name}}</div>
-                    </div>
                 </div>
+                <div class="mt-5 row">
+                    <div class="col">Released year: {{inventory.product.released_year}}</div>
+                    <div class="col">Supplier: {{inventory.supplierId.company_name}}</div>
+                </div>
+                <div class="mt-5">Description: {{inventory.product.description}}</div>
                 <div class="row mt-4">
                     <a href="{%url 'inventory-update' inventory.id %}" class="col btn btn-outline-secondary">Update inventory</a>
-                    <a href="{%url 'inventory-update' inventory.id %}" class="ms-1 col btn btn-outline-secondary">Edit product</a>
+                    <a href="{%url 'product-update' inventory.product.id %}" class="ms-1 col btn btn-outline-secondary">Edit product</a>
                     <a href="{%url 'inventory-delete' inventory.id %}" class="ms-1 col btn btn-outline-danger">Delete</a>
                 </div>
             </div>
