--- a/Business_Solutions/templates/inventory/productDelete.html
+++ b/Business_Solutions/templates/inventory/productDelete.html
@@ -3,7 +3,7 @@
 
 <!-- titile -->
 
-{%block title%} Delete Inventory | Amar Shop {%endblock title%}
+{%block title%} Remove Product | Amar Shop {%endblock title%}
 
 {%block link%}
     <link rel="stylesheet" href="{%static 'css/inventory.css'%}">
@@ -15,23 +15,20 @@
 
     <div class="card height-100 d-flex justify-content-center align-items-center p-5">
         
-            
-
         <div class="card width-50">
-            <div class="card-header fs-5 fw-bolder text-center text-danger">Are you sure to delete Inventory</div>
+            <div class="card-header fs-5 fw-bolder text-center text-danger">Are you sure to delete Product ?</div>
             <div class="card-body">
                 <form method="post" accept="">
                     {% csrf_token %}
-                    {%if inventory.product.productImg%}
+                    {%if product.productImg%}
                     <div class="d-flex justify-content-center align-items-center">
-                        <img src="{{inventory.product.productImg.url}}" height="350px" alt=""/>
+                        <img src="{{product.productImg.url}}" height="350px" alt=""/>
                     </div>
                     {%endif%}
-                    <div class="fs-4 fw-bold text-center">{{inventory.product.model}} <a class="fs-6 alert alert-info p-1 m-0">{{inventory.product.brand}}</a></div>
-                    <div class="fs-6 text-center">Quantity: {{inventory.quantity}}</div>
-                    <div class="fs-6 text-center">Supplier: {{inventory.supplierId.company_name}}</div>
+                    <div class="fs-4 fw-bold text-center">{{product.model}} <a class="fs-6 alert alert-info p-1 m-0">{{product.brand}}</a></div>
+                    <div class="fs-6 text-center">Released year: {{product.released_year}}</div>
                     <div class="d-flex justify-content-center align-items-center mt-3">
-                        <a href="{%url 'inventory-details' inventory.id%}" class="btn btn-secondary">
+                        <a href="{%url 'product-details' product.id%}" class="btn btn-secondary">
                             Cancel
                         </a> 
                         <button type="submit" class="ms-2 btn btn-outline-danger">Delete</button>
