Model Reconstruction Phase-1

--- a/Business_Solutions/templates/Layout.html
+++ b/Business_Solutions/templates/Layout.html
@@ -52,7 +52,7 @@
                         </a>
                     </li>
                     <li class="navItem">
-                        <a href="{%url 'suppliers'%}">
+                        <a href="{%url 'supplier-list'%}">
                             <img src="{%static 'icons/nav/suppliers.png'%}" width="25" alt="Suppliers"/>
                             <div class="navtitle">Suppliers</div>
                         </a>
