--- a/Business_Solutions/static/css/layout.css
+++ b/Business_Solutions/static/css/layout.css
@@ -121,3 +121,11 @@ input, select,textarea{
     cursor: pointer;
     width: 55px;
 }
+
+.custom-btn{
+    padding: .3rem .5rem;
+    border: 1px solid rgb(52, 52, 52);
+    border-radius: 5px;
+    color: rgb(52, 52, 52);
+    width: auto;
+}
