--- a/Business_Solutions/static/css/suppliers.css
+++ b/Business_Solutions/static/css/suppliers.css
@@ -1,4 +1,4 @@
-.inventory{
+.supplier{
     width: 100%;
     height: 100%;
     overflow: scroll;
@@ -45,9 +45,4 @@ ul{
     border: 1px solid rgb(255, 174, 0);
     background: rgb(255, 174, 0);
     border-radius: 15px;
-}
-
-.dolar{
-    width: 80px;
-    height: auto;
 }
