--- a/Business_Solutions/templates/inventory/brandList.html
+++ b/Business_Solutions/templates/inventory/brandList.html
@@ -15,7 +15,10 @@
 
     <div class="card">
         <div class="card-header d-flex justify-content-between align-items-center">
-            <div class="fs-5 text-center">Brands</div>
+            <a href="{%url 'inventory'%}" class="btn-back">
+                <img src="{%static 'icons/inventory/back.png'%}" width="25" alt=""/>
+            </a>
+            <div class="fs-5 fw-bold text-center">Brands</div>
             <a href="{%url 'create-brand'%}" class="btn btn-outline-success btn-sm">Add brand</a>
         </div>
         <div class="card-body">
