--- a/Business_Solutions/templates/inventory/inventory.html
+++ b/Business_Solutions/templates/inventory/inventory.html
@@ -16,6 +16,12 @@
     
     <div class="container card height-100 p-3">
         <div class="row height-45">
+            <a href="{%url 'sales-list' %}" class="col effect m-1  d-flex justify-content-center align-items-center">
+                <div class="rounded-circle alert alert-info text-center p-4 d-flex flex-column justify-content-center align-items-center" style="width: 250px; height: 250px;">
+                    <img src="{% static 'icons/inventory/sale.png'%}" width="130" alt=""/>
+                    <div class="fs-bold fs-5">Sales</div>
+                </div>
+            </a>
             <a href="{%url 'inventory-list' %}" class="col effect m-1  d-flex justify-content-center align-items-center">
                 <div class="rounded-circle alert alert-info text-center p-4 d-flex flex-column justify-content-center align-items-center" style="width: 250px; height: 250px;">
                     <!-- <img src="{%static 'icons/inventory/inventory.png'%}" width="125" alt="inventory"/> -->
@@ -28,6 +34,15 @@
                     <div class="fs-bold fs-5">Inventory</div>
                 </div>
             </a>
+            <a href="{%url 'purchase-list' %}" class="col m-1 effect d-flex justify-content-center align-items-center">
+                <div class="rounded-circle alert alert-info text-center p-4 d-flex flex-column justify-content-center align-items-center" style="width: 250px; height: 250px;">
+                    <!-- <img src="{%static 'icons/inventory/category.png'%}" width="125" alt="categroy"/> -->
+                    <img src="{%static 'icons/inventory/purchase.png'%}" width="120" alt="purchase"/>
+                    <div class="fs-bold fs-5">Purchase</div>
+                </div>
+            </a>
+        </div>
+        <div class="row height-45 mt-2">
             <a href="{%url 'product-list' %}" class="col m-1 effect d-flex justify-content-center align-items-center">
                 <div class="rounded-circle alert alert-info text-center p-4 d-flex flex-column justify-content-center align-items-center" style="width: 250px; height: 250px;">
                     <!-- <img src="{%static 'icons/inventory/product.png'%}" width="125" alt="product"/> -->
@@ -39,8 +54,7 @@
                     <div class="fs-bold fs-5">Product</div>
                 </div>
             </a>
-        </div>
-        <div class="row height-45 mt-2">
+            
             <a href="{%url 'category-list' %}" class="col m-1 effect d-flex justify-content-center align-items-center">
                 <div class="rounded-circle alert alert-info text-center p-4 d-flex flex-column justify-content-center align-items-center" style="width: 250px; height: 250px;">
                     <!-- <img src="{%static 'icons/inventory/category.png'%}" width="125" alt="categroy"/> -->
