--- a/Business_Solutions/templates/inventory/product/productDetails.html
+++ b/Business_Solutions/templates/inventory/product/productDetails.html
@@ -14,13 +14,14 @@
 <div class="inventory">
 
    <div class="card height-100 p-5">
-        <div>
+        <div class="d-flex align-items-center">
             <!-- <a href="{{request.META.HTTP_REFERER}}" class="btn-back">
                 <img src="{%static 'icons/inventory/back.gif'%}" width="25" alt=""/>
             </a> -->
             <a href="{%url 'product-list'%}" class="btn-back">
                 <img src="{%static 'icons/inventory/back.gif'%}" width="25" alt=""/>
             </a>
+            <div class="ms-4 fw-bolder">Product Detail</div>
         </div>
 
         <div class="row height-100">
