--- a/Business_Solutions/templates/inventory/purchase/purchaseList.html
+++ b/Business_Solutions/templates/inventory/purchase/purchaseList.html
@@ -16,13 +16,83 @@
     <div class="card height-100">
         <div class="card-header d-flex justify-content-between align-items-center">
             <a href="{%url 'inventory'%}" class="btn-back">
-                <img src="{%static 'icons/inventory/back.png'%}" width="25" alt=""/>
+                <img src="{%static 'icons/inventory/back.png'%}" width="20" alt=""/>
             </a>
             <div class="fs-4 fw-bold">Purchase List</div>
             <a href="{%url 'new-purchase'%}" class="btn btn-success btn-sm">New Purchase</a>
         </div>
-        <div class="card-body">
-            this is card body
+        <div class="card-header d-flex justify-content-between align-items-center">
+            <div>
+                <form method="get" action="{%url 'purchase-list'%}" class="d-flex">
+                    <input class="form-control" type="text" name="q" placeholder="search product...">
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">Search</button>
+                </form>
+            </div> 
+                   
+            <form method="get" action="{%url 'purchase-list'%}" class="ms-2 d-flex">
+                <div class="input-group">
+                    <input type="date" name="purchase_date" class="form-control" placeholder="Purchase Date">
+                </div> 
+                <div class="input-group">
+                    <select name="supplier" class="form-select" id="inputGroupSelect02">
+                      <option disabled selected>suppliers...</option>
+                      {%for supplier in suppliers%}
+                        <option value="{{supplier.company_name}}">{{supplier}}</option>
+                      {%endfor%}
+                    </select>
+                </div>
+                <div class="input-group">
+                  <select name="brand" class="form-select" id="inputGroupSelect02">
+                    <option disabled selected>brands...</option>
+                    {%for brand in brands%}
+                      <option value="{{brand.brand}}">{{brand}}</option>
+                    {%endfor%}
+                  </select>
+                </div>                     
+                <div class="input-group">
+                  <select name="category" class="form-select" id="inputGroupSelect02">
+                    <option disabled selected>categories...</option>
+                    {%for category in categories%}
+                      <option value="{{category.category}}">{{category}}</option>
+                    {%endfor%}
+                  </select>
+                </div>
+                <button type="submit" class="btn btn-outline-secondary input-group-text" for="inputGroupSelect02">Filter</button>
+          </form>        
+        </div>
+        <div class="card-body overflow-scroll">
+            <table class="table table-bordered border-warning">
+                <thead class="table-secondary">
+                    <tr>
+                        <th scope="col">Product</th>
+                        <th scope="col" class="text-center">Brand</th>
+                        <th scope="col" class="text-center">Category</th>
+                        <th scope="col" class="text-center">Quantity</th>
+                        <th scope="col" class="text-center">Unit Cost</th>
+                        <th scope="col" class="text-center">Amount</th>
+                        <th scope="col" class="text-center">Purchase Date</th>
+                        <th scope="col" class="text-center">Supplier</th>
+                        <th scope="col" class="text-center">Option</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {%for each in purchases%}
+                        <tr>
+                            <td class="text-primary">{{each.model}}</td>
+                            <td class="text-center">{{each.brand}}</td>
+                            <td class="text-center">{{each.category}}</td>
+                            <td class="text-center">{{each.quantity}}</td>
+                            <td class="text-center">{{each.unit_cost}} BDT</td>
+                            <td class="text-center text-danger">{{each.paid_ammount}} BDT</td>
+                            <td class="text-center">{{each.purchase_date}}</td>
+                            <td class="text-center text-primary">{{each.company_name}}</td>
+                            <td class="text-center text-primary">
+                                <a href="{%url 'purchase-details' each.id%}" class="btn btn-sm btn-outline-secondary">details</a>
+                            </td>
+                        </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
         </div>
     </div>
 
