Model Reconstruction Phase-4

--- a/Business_Solutions/templates/inventory/brand/brandList.html
+++ b/Business_Solutions/templates/inventory/brand/brandList.html
@@ -14,19 +14,21 @@
 <div class="inventory">
 
     <div class="card height-100">
-        <div class="card-header d-flex justify-content-between align-items-center position-relative">
-            <a href="{%url 'inventory'%}" class="btn-back">
-                <img src="{%static 'icons/inventory/back.png'%}" width="20" alt=""/>
-            </a>
-            <div class="fs-5 fw-bold text-center position-absolute top-50 start-50 translate-middle"">Brands</div>
-            <a href="{%url 'create-brand'%}" class="btn btn-success btn-sm">Add brand</a>
-        </div>
-        <div class="card-header">
-            <div>
-                <form method="get" action="{%url 'brand-list'%}" class="d-flex">
-                    <input class="form-control" type="text" name="q" placeholder="search brand...">
-                    <button class="btn btn-sm btn-outline-secondary" type="submit">Search</button>
-                </form>
+        <div class="sticky-top bg-white">
+            <div class="card-header d-flex justify-content-between align-items-center position-relative">
+                <a href="{%url 'inventory'%}" class="btn-back">
+                    <img src="{%static 'icons/inventory/back.png'%}" width="20" alt=""/>
+                </a>
+                <div class="fs-5 fw-bold text-center position-absolute top-50 start-50 translate-middle"">Brands</div>
+                <a href="{%url 'create-brand'%}" class="btn btn-success btn-sm">Add brand</a>
+            </div>
+            <div class="card-header">
+                <div>
+                    <form method="get" action="{%url 'brand-list'%}" class="d-flex">
+                        <input class="form-control" type="text" name="q" placeholder="search brand...">
+                        <button class="btn btn-sm btn-outline-secondary" type="submit">Search</button>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="card-body overflow-scroll">
