--- a/Business_Solutions/templates/inventory/inventoryList.html
+++ b/Business_Solutions/templates/inventory/inventoryList.html
@@ -52,9 +52,9 @@
                 
             </div>
         </div>
-        <div class="card-body overflow-scroll">
+        <div class="card-body p-0 ps-3 pe-3 overflow-scroll">
             <table class="table table-bordered border-warning">
-                <thead class="table-secondary">
+                <thead class="table-secondary sticky-top">
                     <tr>
                         <th scope="col">Product Name</th>
                         <th scope="col" class="text-center">Brand</th>
