--- a/Business_Solutions/templates/inventory/purchase/purchaseDelete.html
+++ b/Business_Solutions/templates/inventory/purchase/purchaseDelete.html
@@ -25,7 +25,7 @@
                         <a class="fs-6 alert alert-info p-1 m-0">{{purchase.brand}}</a>
                         <a class="fs-6 alert alert-warning p-1 m-0">{{purchase.category}}</a>
                     </div>
-                    <div class="text-center mb-2">Suppler: <span class="text-success">{{purchase.company_name}}</span></div>
+                    <div class="text-center mb-2">Suppler: <span class="text-success">{{purchase.supplier}}</span></div>
                     <div class="fs-6 text-center mb-2">Purchase Date: <span class="text-primary">{{purchase.purchase_date}}</span></div>
                     <div class="d-flex justify-content-center align-items-center mt-3">
                         <a href="{%url 'purchase-details' purchase.id%}" class="btn btn-sm btn-secondary">
