--- a/Business_Solutions/templates/inventory/purchase/purchaseUpdate.html
+++ b/Business_Solutions/templates/inventory/purchase/purchaseUpdate.html
@@ -13,7 +13,7 @@
 {%block main%}
 <div class="inventory">
 
-    <div class="card d-flex justify-content-center align-items-center p-5">
+    <div class="card height-100 d-flex justify-content-center align-items-center p-5">
         
             
 
@@ -76,56 +76,17 @@
                     <hr/>
                     <div class="col mb-3">
                         <div class="">
-                            <label for="{{ form.company_name_for_label }}" class="form-label">Compnay Name:</label>
-                            {{ form.company_name }}
+                            <label for="{{ form.supplier_for_label }}" class="form-label">Supplier:</label>
+                            {{ form.supplier }}
                             <div class="text-danger mt-1">
-                                {{ form.unit_cost.errors }}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-3">
-                        <div class="">
-                            <label for="{{ form.email_for_label }}" class="form-label">Compnay Email:</label>
-                            {{ form.email }}
-                            <div class="text-danger mt-1">
-                                {{ form.email.errors }}
+                                {{ form.supplier.errors }}
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col mb-3">
                             <div class="">
-                                <label for="{{ form.contact_person_for_label }}" class="form-label">Contact Person:</label>
-                                {{ form.contact_person }}
-                                <div class="text-danger mt-1">
-                                    {{ form.contact_person.errors }}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col mb-3">
-                            <div class="">
-                                <label for="{{ form.contact_person_for_label }}" class="form-label">Contact Person:</label>
-                                {{ form.contact_person }}
-                                <div class="text-danger mt-1">
-                                    {{ form.contact_person.errors }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-3">
-                        <div class="">
-                            <label for="{{ form.address_for_label }}" class="form-label">Address:</label>
-                            {{ form.address }}
-                            <div class="text-danger mt-1">
-                                {{ form.address.errors }}
-                            </div>
-                        </div>
-                    </div>
-                    <hr/>
-                    <div class="row">
-                        <div class="col mb-3">
-                            <div class="">
-                                <label for="{{ form.payment_method }}" class="form-label">Payment Method:</label>
+                                <label for="{{ form.payment_method_for_label }}" class="form-label">Payment Method:</label>
                                 {{ form.payment_method }}
                                 <div class="text-danger mt-1">
                                     {{ form.payment_method.errors }}
